examples/test/testpolicy85.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy85
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key28: value13
      key19: value21
      key4: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value42
          key27: value12
          key47: value11
      podSelector:
        matchLabels:
          key39: value33
          key22: value20
          key28: value16
